# ChatGOT

./: .gitignore  DEBUGGING_PROGRESS.md  DEBUGGING_README.md  DEBUG_LOG.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_PLAN.md  README.md  benchmark_results.md  continue_pipeline.py  pyproject.toml  requirements-dev.lock.txt  requirements.lock.txt  requirements.txt  run_tests.py  test.py  train_log.txt
.github/workflows/: ci.yaml  main.yml  tests.yml
backup/: check_sequence_shifts.py  data_inspection_results.txt  generate.py  inspect_data.py  model.py  plot_loss.py  prepare_data.py  progress_monitor.py  requirements.txt  run_pipeline.py  test_generation.py  train.py  train_script.py  training_log.txt
backup/checkpoints/: loss_history.pkl
backup/output/: vocab.json
backup/refactor_2025-03-23_14-41-50/: batch_size_results.txt  diagnostic.py  generate_text.py  optimize_training.py  process_data.py  train_script.py
benchmark_logs/: benchmarks.json
benchmarking/: README.md  __init__.py  main.py  runner.py
benchmarking/benchmarks/: __init__.py  inference_performance.py  model_accuracy.py  training_speed.py
benchmarking/utils/: __init__.py  visualization.py
chatgot/cli/: __init__.py
chatgot/core/: config.py
chatgot/data/: dataset.py  processor.py  simple_processor.py
chatgot/pipeline/: runner.py
chatgot/utils/: logging.py
checkpoints/: checkpoint_step_2.pt  checkpoint_step_4.pt
checkpoints/tokenizer_step_4/: tokenizer_config.json
conf/: README.md  __init__.py  config.yaml  generate.yaml  test_minimal.yaml
conf/callbacks/: default.yaml
conf/data/: got_char.yaml  got_char_level.yaml  got_s1_subword.yaml  got_subword.yaml  got_subword_level.yaml  test_pickle_loader.yaml
conf/experiment/: chatgot_25m.yaml  chatgot_95m_char.yaml  chatgot_95m_subword.yaml  test_cli_train.yaml  test_e2e_train.yaml  test_got_char.yaml  test_got_subword.yaml
conf/generation/: default.yaml
conf/model/: gpt_decoder.yaml  transformer.yaml  transformer_10m.yaml  transformer_1m.yaml  transformer_95m.yaml  transformer_debug.yaml  transformer_model.yaml  transformer_tiny.yaml
conf/optimizer/: adamw.yaml
conf/scheduler/: cosine.yaml  cosine_annealing.yaml
conf/tokenizer/: default_hf.yaml
conf/training/: default.yaml  minimal_test.yaml
configs/: __init__.py  config.yaml  default.yaml  merged_config.yaml
configs/data/: __init__.py  default.yaml
configs/experiments/: example.yaml
configs/models/: __init__.py  chatgot_small_char.yaml  chatgot_small_char_optimized.yaml  chatgot_tiny_char.yaml  default.yaml  small.yaml
configs/pipeline/: __init__.py  default.yaml
configs/training/: __init__.py  default.yaml  fast.yaml
data/: README.md  game_of_thrones_dataset.txt  got_s01e01.txt  got_s01e02.txt  got_s01e03.txt  got_s01e04.txt  got_s01e05.txt  got_s01e06.txt  got_s01e07.txt  got_s01e08.txt  got_s01e09.txt  got_s01e10.txt  got_s02e01.txt  got_s02e02.txt  got_s02e03.txt  got_s02e04.txt  got_s02e05.txt  got_s02e06.txt  got_s02e07.txt  got_s02e08.txt  got_s02e09.txt  got_s02e10.txt  got_s03e01.txt  got_s03e02.txt  got_s03e03.txt  got_s03e04.txt  got_s03e05.txt  got_s03e06.txt  got_s03e07.txt  got_s03e08.txt  got_s03e09.txt  got_s03e10.txt  got_s04e01.txt  got_s04e02.txt  got_s04e03.txt  got_s04e04.txt  got_s04e05.txt  got_s04e06.txt  got_s04e07.txt  got_s04e08.txt  (+35 more)
docs/: INDEX.md  README.md  architecture.md  data_pipeline.md  extending.md  logging.md  model.md  optimizations.md  organization.md
docs/cli/: README.md
docs/guides/: debugging_guide.md  getting_started.md  implementation_guide.md
flow/: README.md  flow.md  gemini-2.5-pro-exp-03-25.md  guidelines_and_conventions.md
flow/active/: README.md  tasks.md
flow/domains/: README.md
flow/knowledge/: pytorch_debugging.md
flow/meta/: README.md  cli_usage.md  debugging_strategy.md  documentation_guidelines.md  evolution.md  general_troubleshooting_framework.md  glossary.md  improvements.md  model.md  post_mortem_rule.md  principles.md  reminders.md  tasks.md  troubleshooting_and_debugging.md
flow/performance/: optimizations.md
flow/planning/: README.md  organization.md  refactoring_plan.md
flow/project/: README.md  conventions.md  dependencies.md  development_plan.md  documentation_guidelines.md  old_priorities.md  old_roadmap.md  reference_minimal_test_run_gpu.md  tasks.md  vision.md  vision_and_plan.md  working_minimal_test_config_20250403.md
flow/reference/: README.md  craft_domain.md
flow/system/: README.md  agent_capabilities.md  configuration.md  consistency.md  guidelines.md
flow_craft/active/: tasks.md
flow_craft/performance/: performance.md
notebooks/: README.md
outputs/: README.md
performance/: performance.md
planning/: project_status.md  refactoring_plan.md  state.md
processed_data/: stats.json  vocab.json
scripts/: README.md  __init__.py  chatgot  check_model_params.py  check_vocab.py  continue_pipeline.py  craft  evaluate.py  fix_log_encoding.py  generate.py  generate_samples.py  get_latest_checkpoint.py  legacy.py  main.py  model_param_test.py  plot_loss.py  prepare_data.py  preprocess.py  process_text_data.py  state.json  timeout_test_runner.py  train.py  train_tokenizer.py  train_with_samples.py  validate_model.py
some_dir/: tokenizer_metadata.json
src/: README.md  __init__.py  benchmark_logger.py  cuda_optimizations.py  data_processor.py  model.py  optimizer_test.py  run_optimization_benchmarks.py  throughput_monitor.py  train.py  train_optimized.py  trainer.py  utils.py
src/cli/: run.py  (+5 more)
tests/: README.md  chatgot_test_cases.py  conftest.py  craft_test_cases.py  integration_tests.py  run_all_tests.py  run_optimization_tests.py  test_data.py  test_datasets.py  test_models.py  test_trainers.py
(+461 files in other folders)
