[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chatgot"
version = "0.1.0"
description = "Character-level GPT for Game of Thrones Text Generation"
authors = ["AI Team <ai@example.com>"]
readme = "README.md"
packages = [{include = "chatgot"}]
license = "MIT"
repository = "https://github.com/yourusername/ChatGoT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
torch = "^2.0.0"
numpy = "^1.24.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
mlflow = "^2.8.0"
pyyaml = "^6.0.0"
tensorboard = "^2.13.0"
notebook = "^7.0.0"
scikit-learn = "^1.3.0"
coloredlogs = "^15.0.1"
dvc = {extras = ["s3"], version = "^3.30.3"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
types-PyYAML = "^6.0.12"
pytest-mock = "^3.11.1"
hypothesis = "^6.87.1"

[tool.poetry.scripts]
chatgot = "chatgot.cli:main"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["torch.*", "numpy.*", "matplotlib.*", "tqdm.*", "mlflow.*", "hydra.*", "omegaconf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=chatgot --cov-report=term-missing -xvs" 