[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Craft"
version = "1.0.0"
description = "An experimental framework for exploring and developing language models and other AI architectures"
authors = [
    { name = "April Labs" }
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "mlflow>=2.8.0",
    "click>=8.1.0",
    "tensorboard>=2.13.0",
    "psutil>=5.9.0",
    "py-spy>=0.3.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.20.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "wandb>=0.15.0",
    "rich>=13.3.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.2",
]

[project.scripts]
craft = "src.cli.run:app"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.poetry.dependencies]
python = "^3.13"
torch = "^2.4.0"
numpy = "^2.0.0"
mlflow = "^2.13.2"
typer = {extras = ["rich"], version = "^0.12.3"}
omegaconf = "^2.3.0"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
pyyaml = "^6.0.1"
transformers = "^4.41.2"
hydra-core = "^1.3.2" 